// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Breadcrumb - Snapshots > Breadcrumb Container > matches snapshot with custom className 1`] = `
<nav
  aria-label="breadcrumb"
  class="flex w-full max-w-full min-w-0 custom-breadcrumb"
>
  <ol
    class="flex min-w-0 w-full max-w-full flex-nowrap items-center justify-end overflow-hidden gap-2.5"
  >
    <li
      class="flex min-w-0 items-center justify-start gap-2.5 text-muted-foreground hover:text-foreground transition-colors cursor-pointer"
    >
      <button
        class="flex max-w-full min-w-0 items-center gap-1 overflow-hidden"
        type="button"
      >
        <span
          class="block max-w-full truncate font-sans text-sm leading-5 font-bold"
        >
          Home
        </span>
      </button>
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumb - Snapshots > Breadcrumb Container > matches snapshot with default props 1`] = `
<nav
  aria-label="breadcrumb"
  class="flex w-full max-w-full min-w-0"
>
  <ol
    class="flex min-w-0 w-full max-w-full flex-nowrap items-center justify-end overflow-hidden gap-2.5"
  >
    <li
      class="flex min-w-0 items-center justify-start gap-2.5 text-muted-foreground hover:text-foreground transition-colors cursor-pointer"
    >
      <button
        class="flex max-w-full min-w-0 items-center gap-1 overflow-hidden"
        type="button"
      >
        <span
          class="block max-w-full truncate font-sans text-sm leading-5 font-bold"
        >
          Home
        </span>
      </button>
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumb - Snapshots > Breadcrumb Container > matches snapshot with medium size 1`] = `
<nav
  aria-label="breadcrumb"
  class="flex w-full max-w-full min-w-0"
>
  <ol
    class="flex min-w-0 w-full max-w-full flex-nowrap items-center justify-end overflow-hidden gap-2.5"
  >
    <li
      class="flex min-w-0 items-center justify-start gap-2.5 text-muted-foreground hover:text-foreground transition-colors cursor-pointer"
    >
      <button
        class="flex max-w-full min-w-0 items-center gap-1 overflow-hidden"
        type="button"
      >
        <span
          class="block max-w-full truncate font-sans text-sm leading-5 font-bold"
        >
          Home
        </span>
      </button>
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumb - Snapshots > Breadcrumb Container > matches snapshot with small size 1`] = `
<nav
  aria-label="breadcrumb"
  class="flex w-full max-w-full min-w-0"
>
  <ol
    class="flex min-w-0 w-full max-w-full flex-nowrap items-center justify-end overflow-hidden gap-1.5"
  >
    <li
      class="flex min-w-0 items-center justify-start gap-2.5 text-muted-foreground hover:text-foreground transition-colors cursor-pointer"
    >
      <button
        class="flex max-w-full min-w-0 items-center gap-1 overflow-hidden"
        type="button"
      >
        <span
          class="block max-w-full truncate font-sans text-sm leading-5 font-bold"
        >
          Home
        </span>
      </button>
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumb - Snapshots > BreadcrumbEllipsis > matches snapshot with custom className 1`] = `
<nav
  aria-label="breadcrumb"
  class="flex w-full max-w-full min-w-0"
>
  <ol
    class="flex min-w-0 w-full max-w-full flex-nowrap items-center justify-end overflow-hidden gap-2.5"
  >
    <span
      aria-hidden="true"
      class="flex h-9 w-9 items-center justify-center custom-ellipsis"
      role="presentation"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-ellipsis h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="1"
        />
        <circle
          cx="19"
          cy="12"
          r="1"
        />
        <circle
          cx="5"
          cy="12"
          r="1"
        />
      </svg>
      <span
        class="sr-only"
      >
        More
      </span>
    </span>
  </ol>
</nav>
`;

exports[`Breadcrumb - Snapshots > BreadcrumbEllipsis > matches snapshot with default props 1`] = `
<nav
  aria-label="breadcrumb"
  class="flex w-full max-w-full min-w-0"
>
  <ol
    class="flex min-w-0 w-full max-w-full flex-nowrap items-center justify-end overflow-hidden gap-2.5"
  >
    <span
      aria-hidden="true"
      class="flex h-9 w-9 items-center justify-center"
      role="presentation"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-ellipsis h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="1"
        />
        <circle
          cx="19"
          cy="12"
          r="1"
        />
        <circle
          cx="5"
          cy="12"
          r="1"
        />
      </svg>
      <span
        class="sr-only"
      >
        More
      </span>
    </span>
  </ol>
</nav>
`;

exports[`Breadcrumb - Snapshots > BreadcrumbItem > matches snapshot with current variant 1`] = `
<nav
  aria-label="breadcrumb"
  class="flex w-full max-w-full min-w-0"
>
  <ol
    class="flex min-w-0 w-full max-w-full flex-nowrap items-center justify-end overflow-hidden gap-2.5"
  >
    <li
      class="flex min-w-0 items-center justify-start gap-2.5 text-foreground"
    >
      <button
        class="flex max-w-full min-w-0 items-center gap-1 overflow-hidden"
        type="button"
      >
        <span
          class="block max-w-full truncate font-sans text-sm leading-5 font-bold"
        >
          Current
        </span>
      </button>
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumb - Snapshots > BreadcrumbItem > matches snapshot with custom className 1`] = `
<nav
  aria-label="breadcrumb"
  class="flex w-full max-w-full min-w-0"
>
  <ol
    class="flex min-w-0 w-full max-w-full flex-nowrap items-center justify-end overflow-hidden gap-2.5"
  >
    <li
      class="flex min-w-0 items-center justify-start gap-2.5 text-muted-foreground hover:text-foreground transition-colors cursor-pointer custom-item"
    >
      <button
        class="flex max-w-full min-w-0 items-center gap-1 overflow-hidden"
        type="button"
      >
        <span
          class="block max-w-full truncate font-sans text-sm leading-5 font-bold"
        >
          Home
        </span>
      </button>
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumb - Snapshots > BreadcrumbItem > matches snapshot with dropdown variant 1`] = `
<nav
  aria-label="breadcrumb"
  class="flex w-full max-w-full min-w-0"
>
  <ol
    class="flex min-w-0 w-full max-w-full flex-nowrap items-center justify-end overflow-hidden gap-2.5"
  >
    <li
      class="flex min-w-0 items-center justify-start gap-2.5 text-muted-foreground hover:text-foreground transition-colors cursor-pointer rounded overflow-hidden"
    >
      <button
        class="flex max-w-full min-w-0 items-center gap-1 overflow-hidden"
        type="button"
      >
        <span
          class="block max-w-full truncate font-sans text-sm leading-5 font-bold"
        >
          Menu
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-down h-[15px] w-[15px]"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m6 9 6 6 6-6"
          />
        </svg>
      </button>
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumb - Snapshots > BreadcrumbItem > matches snapshot with href prop 1`] = `
<nav
  aria-label="breadcrumb"
  class="flex w-full max-w-full min-w-0"
>
  <ol
    class="flex min-w-0 w-full max-w-full flex-nowrap items-center justify-end overflow-hidden gap-2.5"
  >
    <li
      class="flex min-w-0 items-center justify-start gap-2.5 text-muted-foreground hover:text-foreground transition-colors cursor-pointer"
    >
      <a
        class="flex max-w-full min-w-0 items-center gap-1 overflow-hidden"
        href="/home"
      >
        <span
          class="block max-w-full truncate font-sans text-sm leading-5 font-bold"
        >
          Home
        </span>
      </a>
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumb - Snapshots > BreadcrumbItem > matches snapshot with link variant 1`] = `
<nav
  aria-label="breadcrumb"
  class="flex w-full max-w-full min-w-0"
>
  <ol
    class="flex min-w-0 w-full max-w-full flex-nowrap items-center justify-end overflow-hidden gap-2.5"
  >
    <li
      class="flex min-w-0 items-center justify-start gap-2.5 text-muted-foreground hover:text-foreground transition-colors cursor-pointer"
    >
      <button
        class="flex max-w-full min-w-0 items-center gap-1 overflow-hidden"
        type="button"
      >
        <span
          class="block max-w-full truncate font-sans text-sm leading-5 font-bold"
        >
          Home
        </span>
      </button>
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumb - Snapshots > BreadcrumbPage > matches snapshot with custom className 1`] = `
<nav
  aria-label="breadcrumb"
  class="flex w-full max-w-full min-w-0"
>
  <ol
    class="flex min-w-0 w-full max-w-full flex-nowrap items-center justify-end overflow-hidden gap-2.5"
  >
    <span
      aria-current="page"
      aria-disabled="true"
      class="font-normal text-foreground custom-page"
      role="link"
    >
      Current Page
    </span>
  </ol>
</nav>
`;

exports[`Breadcrumb - Snapshots > BreadcrumbPage > matches snapshot with default props 1`] = `
<nav
  aria-label="breadcrumb"
  class="flex w-full max-w-full min-w-0"
>
  <ol
    class="flex min-w-0 w-full max-w-full flex-nowrap items-center justify-end overflow-hidden gap-2.5"
  >
    <span
      aria-current="page"
      aria-disabled="true"
      class="font-normal text-foreground"
      role="link"
    >
      Current Page
    </span>
  </ol>
</nav>
`;

exports[`Breadcrumb - Snapshots > BreadcrumbSeparator > matches snapshot with custom className 1`] = `
<nav
  aria-label="breadcrumb"
  class="flex w-full max-w-full min-w-0"
>
  <ol
    class="flex min-w-0 w-full max-w-full flex-nowrap items-center justify-end overflow-hidden gap-2.5"
  >
    <li
      class="flex min-w-0 items-center justify-start gap-2.5 text-muted-foreground hover:text-foreground transition-colors cursor-pointer"
    >
      <button
        class="flex max-w-full min-w-0 items-center gap-1 overflow-hidden"
        type="button"
      >
        <span
          class="block max-w-full truncate font-sans text-sm leading-5 font-bold"
        >
          Home
        </span>
      </button>
    </li>
    <li
      aria-hidden="true"
      class="text-muted-foreground shrink-0 w-4 h-4 custom-separator"
      role="presentation"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-right h-full w-full"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m9 18 6-6-6-6"
        />
      </svg>
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumb - Snapshots > BreadcrumbSeparator > matches snapshot with custom icon 1`] = `
<nav
  aria-label="breadcrumb"
  class="flex w-full max-w-full min-w-0"
>
  <ol
    class="flex min-w-0 w-full max-w-full flex-nowrap items-center justify-end overflow-hidden gap-2.5"
  >
    <li
      class="flex min-w-0 items-center justify-start gap-2.5 text-muted-foreground hover:text-foreground transition-colors cursor-pointer"
    >
      <button
        class="flex max-w-full min-w-0 items-center gap-1 overflow-hidden"
        type="button"
      >
        <span
          class="block max-w-full truncate font-sans text-sm leading-5 font-bold"
        >
          Home
        </span>
      </button>
    </li>
    <li
      aria-hidden="true"
      class="text-muted-foreground shrink-0 w-4 h-4"
      role="presentation"
    >
      <span
        data-testid="custom-separator"
      >
        /
      </span>
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumb - Snapshots > BreadcrumbSeparator > matches snapshot with default icon 1`] = `
<nav
  aria-label="breadcrumb"
  class="flex w-full max-w-full min-w-0"
>
  <ol
    class="flex min-w-0 w-full max-w-full flex-nowrap items-center justify-end overflow-hidden gap-2.5"
  >
    <li
      class="flex min-w-0 items-center justify-start gap-2.5 text-muted-foreground hover:text-foreground transition-colors cursor-pointer"
    >
      <button
        class="flex max-w-full min-w-0 items-center gap-1 overflow-hidden"
        type="button"
      >
        <span
          class="block max-w-full truncate font-sans text-sm leading-5 font-bold"
        >
          Home
        </span>
      </button>
    </li>
    <li
      aria-hidden="true"
      class="text-muted-foreground shrink-0 w-4 h-4"
      role="presentation"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-right h-full w-full"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m9 18 6-6-6-6"
        />
      </svg>
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumb - Snapshots > BreadcrumbSeparator > matches snapshot with medium size 1`] = `
<nav
  aria-label="breadcrumb"
  class="flex w-full max-w-full min-w-0"
>
  <ol
    class="flex min-w-0 w-full max-w-full flex-nowrap items-center justify-end overflow-hidden gap-2.5"
  >
    <li
      class="flex min-w-0 items-center justify-start gap-2.5 text-muted-foreground hover:text-foreground transition-colors cursor-pointer"
    >
      <button
        class="flex max-w-full min-w-0 items-center gap-1 overflow-hidden"
        type="button"
      >
        <span
          class="block max-w-full truncate font-sans text-sm leading-5 font-bold"
        >
          Home
        </span>
      </button>
    </li>
    <li
      aria-hidden="true"
      class="text-muted-foreground shrink-0 w-4 h-4"
      role="presentation"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-right h-full w-full"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m9 18 6-6-6-6"
        />
      </svg>
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumb - Snapshots > BreadcrumbSeparator > matches snapshot with small size 1`] = `
<nav
  aria-label="breadcrumb"
  class="flex w-full max-w-full min-w-0"
>
  <ol
    class="flex min-w-0 w-full max-w-full flex-nowrap items-center justify-end overflow-hidden gap-2.5"
  >
    <li
      class="flex min-w-0 items-center justify-start gap-2.5 text-muted-foreground hover:text-foreground transition-colors cursor-pointer"
    >
      <button
        class="flex max-w-full min-w-0 items-center gap-1 overflow-hidden"
        type="button"
      >
        <span
          class="block max-w-full truncate font-sans text-sm leading-5 font-bold"
        >
          Home
        </span>
      </button>
    </li>
    <li
      aria-hidden="true"
      class="text-muted-foreground shrink-0 w-[15px] h-[15px]"
      role="presentation"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-right h-full w-full"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m9 18 6-6-6-6"
        />
      </svg>
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumb - Snapshots > Complete Breadcrumb Examples > matches snapshot for complex breadcrumb 1`] = `
<nav
  aria-label="breadcrumb"
  class="flex w-full max-w-full min-w-0"
>
  <ol
    class="flex min-w-0 w-full max-w-full flex-nowrap items-center justify-end overflow-hidden gap-2.5"
  >
    <li
      class="flex min-w-0 items-center justify-start gap-2.5 text-muted-foreground hover:text-foreground transition-colors cursor-pointer"
    >
      <a
        class="flex max-w-full min-w-0 items-center gap-1 overflow-hidden"
        href="/"
      >
        <span
          class="block max-w-full truncate font-sans text-sm leading-5 font-bold"
        >
          Home
        </span>
      </a>
    </li>
    <li
      aria-hidden="true"
      class="text-muted-foreground shrink-0 w-4 h-4"
      role="presentation"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-right h-full w-full"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m9 18 6-6-6-6"
        />
      </svg>
    </li>
    <span
      aria-hidden="true"
      class="flex h-9 w-9 items-center justify-center"
      role="presentation"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-ellipsis h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="1"
        />
        <circle
          cx="19"
          cy="12"
          r="1"
        />
        <circle
          cx="5"
          cy="12"
          r="1"
        />
      </svg>
      <span
        class="sr-only"
      >
        More
      </span>
    </span>
    <li
      aria-hidden="true"
      class="text-muted-foreground shrink-0 w-4 h-4"
      role="presentation"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-right h-full w-full"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m9 18 6-6-6-6"
        />
      </svg>
    </li>
    <li
      class="flex min-w-0 items-center justify-start gap-2.5 text-muted-foreground hover:text-foreground transition-colors cursor-pointer rounded overflow-hidden"
    >
      <button
        class="flex max-w-full min-w-0 items-center gap-1 overflow-hidden"
        type="button"
      >
        <span
          class="block max-w-full truncate font-sans text-sm leading-5 font-bold"
        >
          Category
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-down h-[15px] w-[15px]"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m6 9 6 6 6-6"
          />
        </svg>
      </button>
    </li>
    <li
      aria-hidden="true"
      class="text-muted-foreground shrink-0 w-4 h-4"
      role="presentation"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-right h-full w-full"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m9 18 6-6-6-6"
        />
      </svg>
    </li>
    <li
      class="flex min-w-0 items-center justify-start gap-2.5 text-muted-foreground hover:text-foreground transition-colors cursor-pointer"
    >
      <a
        class="flex max-w-full min-w-0 items-center gap-1 overflow-hidden"
        href="/products"
      >
        <span
          class="block max-w-full truncate font-sans text-sm leading-5 font-bold"
        >
          Products
        </span>
      </a>
    </li>
    <li
      aria-hidden="true"
      class="text-muted-foreground shrink-0 w-4 h-4"
      role="presentation"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-right h-full w-full"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m9 18 6-6-6-6"
        />
      </svg>
    </li>
    <span
      aria-current="page"
      aria-disabled="true"
      class="font-normal text-foreground"
      role="link"
    >
      Product Details
    </span>
  </ol>
</nav>
`;

exports[`Breadcrumb - Snapshots > Complete Breadcrumb Examples > matches snapshot for simple breadcrumb 1`] = `
<nav
  aria-label="breadcrumb"
  class="flex w-full max-w-full min-w-0"
>
  <ol
    class="flex min-w-0 w-full max-w-full flex-nowrap items-center justify-end overflow-hidden gap-2.5"
  >
    <li
      class="flex min-w-0 items-center justify-start gap-2.5 text-muted-foreground hover:text-foreground transition-colors cursor-pointer"
    >
      <a
        class="flex max-w-full min-w-0 items-center gap-1 overflow-hidden"
        href="/"
      >
        <span
          class="block max-w-full truncate font-sans text-sm leading-5 font-bold"
        >
          Home
        </span>
      </a>
    </li>
    <li
      aria-hidden="true"
      class="text-muted-foreground shrink-0 w-4 h-4"
      role="presentation"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-right h-full w-full"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m9 18 6-6-6-6"
        />
      </svg>
    </li>
    <span
      aria-current="page"
      aria-disabled="true"
      class="font-normal text-foreground"
      role="link"
    >
      Current
    </span>
  </ol>
</nav>
`;

exports[`Breadcrumb - Snapshots > Complete Breadcrumb Examples > matches snapshot for small size breadcrumb 1`] = `
<nav
  aria-label="breadcrumb"
  class="flex w-full max-w-full min-w-0"
>
  <ol
    class="flex min-w-0 w-full max-w-full flex-nowrap items-center justify-end overflow-hidden gap-1.5"
  >
    <li
      class="flex min-w-0 items-center justify-start gap-2.5 text-muted-foreground hover:text-foreground transition-colors cursor-pointer"
    >
      <a
        class="flex max-w-full min-w-0 items-center gap-1 overflow-hidden"
        href="/"
      >
        <span
          class="block max-w-full truncate font-sans text-sm leading-5 font-bold"
        >
          Home
        </span>
      </a>
    </li>
    <li
      aria-hidden="true"
      class="text-muted-foreground shrink-0 w-[15px] h-[15px]"
      role="presentation"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-right h-full w-full"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m9 18 6-6-6-6"
        />
      </svg>
    </li>
    <li
      class="flex min-w-0 items-center justify-start gap-2.5 text-muted-foreground hover:text-foreground transition-colors cursor-pointer"
    >
      <a
        class="flex max-w-full min-w-0 items-center gap-1 overflow-hidden"
        href="/category"
      >
        <span
          class="block max-w-full truncate font-sans text-sm leading-5 font-bold"
        >
          Category
        </span>
      </a>
    </li>
    <li
      aria-hidden="true"
      class="text-muted-foreground shrink-0 w-[15px] h-[15px]"
      role="presentation"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-right h-full w-full"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m9 18 6-6-6-6"
        />
      </svg>
    </li>
    <span
      aria-current="page"
      aria-disabled="true"
      class="font-normal text-foreground"
      role="link"
    >
      Current
    </span>
  </ol>
</nav>
`;

exports[`Breadcrumb - Snapshots > Complete Breadcrumb Examples > matches snapshot with custom styling 1`] = `
<nav
  aria-label="breadcrumb"
  class="flex w-full max-w-full min-w-0 custom-breadcrumb"
>
  <ol
    class="flex min-w-0 w-full max-w-full flex-nowrap items-center justify-end overflow-hidden gap-2.5"
  >
    <li
      class="flex min-w-0 items-center justify-start gap-2.5 text-muted-foreground hover:text-foreground transition-colors cursor-pointer custom-link"
    >
      <a
        class="flex max-w-full min-w-0 items-center gap-1 overflow-hidden"
        href="/"
      >
        <span
          class="block max-w-full truncate font-sans text-sm leading-5 font-bold"
        >
          Home
        </span>
      </a>
    </li>
    <li
      aria-hidden="true"
      class="text-muted-foreground shrink-0 w-4 h-4 custom-sep"
      role="presentation"
    >
      <span>
        /
      </span>
    </li>
    <li
      class="flex min-w-0 items-center justify-start gap-2.5 text-foreground custom-current"
    >
      <button
        class="flex max-w-full min-w-0 items-center gap-1 overflow-hidden"
        type="button"
      >
        <span
          class="block max-w-full truncate font-sans text-sm leading-5 font-bold"
        >
          Current
        </span>
      </button>
    </li>
  </ol>
</nav>
`;
